@@ -333,6 +333,29 @@ contains
 
     end function get_gscatter
 
+    function do_phi_averaging(sc)
+        implicit none
+        integer i,j
+        complex(kind=dp_complex), dimension(size(gscatter)) :: do_phi_averaging
+        complex(kind=dp_complex), dimension(size(scatter), size(scatter)) :: sc
+
+        real(kind=dp_real) :: phi, scval, 
+        !$omp parallel shared(gscatter,gftsh,k,dy) 
+        !$omp do schedule(dynamic) private(i)
+        do i=1, size(thetaz)
+            scval = 0.0D0
+            do j=1, nphi
+                phi = -pi + 2*pi*(real(i) / real(nphi))
+                scval += linterp2d(thetaz, thetaz, sc, thetaz(i) * sin(phi), thetaz(i) * cos(phi))/nphi
+            end do 
+            do_phi_averaging(i) = scval
+        end do
+        !$omp end do 
+        !$omp end parallel
+
+
+    end function do_phi_averaging
+
     subroutine diff_scat_cross_sect()
         implicit none 
         integer :: nangle, i, j
@@ -359,7 +382,7 @@ contains
         if (geometry .eq. 'sphere' .and. .not. force_numerical) then 
             if (verbose_mode) write(stderr,*) " Using analytical ADT for sphere..."
 
-            if (do_full_2d_fft) then
+            if (do_full_2d_fft .or. do_phi_averaging) then
                 dth = 2 * sqrt(2. + 1.0D-5)* thetaz(size(thetaz)) / (size(thets) - 1)
 
                 !$omp parallel shared(thets, dth, thetaz, sc_array, k, a_eff, delm)
@@ -479,18 +502,35 @@ contains
                     if (do_full_2d_fft) then
                         call fft2d_faster(sh,kmin,kmax,enhancement, ftsh)
                         
-                        !$omp parallel shared(scatter,ftsh,k,dz,dy, norientations) 
-                        !$omp do schedule(dynamic) private(i,j)
-                        do i=1,size(kz)
-                            do j=1,size(ky)
+
+                        if (do_phi_averaging) then
+                            gftsh(:) = do_phi_averaging(sh)
+
+                            !$omp parallel shared(gscatter,gftsh,k,dy, norientations) 
+                            !$omp do schedule(dynamic) private(i)
+                            do i=1, size(kz)
                                 !-$OMP CRITICAL
-                                scatter(i,j) = scatter(i,j) +  (k*dz*dy*abs(ftsh(i,j))/twopi)**2/real(norientations,kind=dp_real)
+                                gscatter(i) = gscatter(i) + ( k * dy *abs(gftsh(i))/twopi)**2/real(norientations,kind=dp_real)
                                 !-$OMP END CRITICAL
                             end do
-                        end do
-                        !$omp end do
-                        !$omp end parallel
-                        
+                            !$omp end do
+                            !$omp end parallel
+
+                        else
+                            !$omp parallel shared(scatter,ftsh,k,dz,dy, norientations) 
+                            !$omp do schedule(dynamic) private(i,j)
+                            do i=1,size(kz)
+                                do j=1,size(ky)
+                                    !-$OMP CRITICAL
+                                    scatter(i,j) = scatter(i,j) +  (k*dz*dy*abs(ftsh(i,j))/twopi)**2/real(norientations,kind=dp_real)
+                                    !-$OMP END CRITICAL
+                                end do
+                            end do
+                            !$omp end do
+                            !$omp end parallel
+                        end if
+
+
                         
 
                     else 
@@ -544,7 +584,9 @@ contains
       integer :: line, status, next, ng, n, allocatestatus, i, j, norientations_new, closest_ngrid
       real(kind=dp_real) :: ds, max_dist, scale, lambda
       character(len=100) :: junk
-
+        @OMP_UNCOMMENT@if (nthreads > 0) then
+        @OMP_UNCOMMENT@    omp_set_num_threads(nthreads)
+        @OMP_UNCOMMENT@end if
         
         ! -- Allocate variables for ephots and index of refraction
         allocate(ephots(nephots),stat=allocatestatus)
@@ -775,7 +817,7 @@ contains
         L = z(size(z)) - z(1)  ! length of grid in physical coords
 
     ! figures out what kmin, kmax, enhancement and kactual are.
-        if (do_full_2d_fft) then
+        if (do_full_2d_fft .and. .not. do_phi_averaging) then
             call get_fft_vals(-max_angle,max_angle,nscatter,kmin,kmax,enhancement,kactual)   
         else
             call get_fft_vals(0.0D0,max_angle,nscatter,kmin,kmax,enhancement,kactual)   
@@ -804,7 +846,7 @@ contains
         allocate(scatter(kactual,kactual),stat = allocatestatus)
             if (allocatestatus /= 0) stop "ERROR *** not enough memory to allocate (scatter) array ***"
        
-        if (.not. do_full_2d_fft) then
+        if ((.not. do_full_2d_fft) .or. do_phi_averaging) then
             allocate(gftsh(kactual),stat = allocatestatus)
                 if (allocatestatus /= 0) stop "ERROR *** not enough memory to allocate (gftsh) array ***"
             allocate(gscatter(kactual),stat = allocatestatus)
@@ -825,7 +867,7 @@ contains
             ! its a heuristic for now, unless there's a bug lingering somewhere to explain
             ! why it works. If you don't use it, the minima shift outward by a factor of ~1/ngrid 
             ! 
-            if (.not. no_sang_correction) then
+            if (sang_correction) then
                 thetaz(i) = asin((kz(i)/k)*(1 - 1./ngrid))
                 thetay(i) = asin((ky(i)/k)*(1 - 1./ngrid))
             else 
@@ -834,7 +876,7 @@ contains
             end if 
 
             ! Initialize arrays
-            if (.not. do_full_2d_fft) then 
+            if (.not. do_full_2d_fft .or. do_phi_averaging) then 
                 gscatter(i) = 0.0D0
             end if 
 
@@ -964,7 +1006,7 @@ contains
         integer                :: j 
         character(len=50)    :: junk
         real(kind=dp_real) :: norm
-        integer :: cbrt_norientations, nbeta, ntheta, nphi, sqrt_norientations
+        integer :: cbrt_norientations, nbeta, ntheta, nph, sqrt_norientations
 
 
         ! Note (JAH, June 26, 2014) -- this function needs to be fixed for rotating
@@ -974,13 +1016,23 @@ contains
         if (angle_mode .eq. 'sequential') then 
             if (rotation_axis == 'none') then 
                 cbrt_norientations = int(norientations**(1.0/3.0))
-                norm = real(cbrt_norientations ,kind=dp_real)**(-1.0)
-                nbeta = mod(i/(cbrt_norientations*cbrt_norientations),   cbrt_norientations)
-                ntheta = mod(i/(cbrt_norientations),               cbrt_norientations)
-                nphi = mod(i,                             cbrt_norientations) 
+                sqrt_norientations = int(norientations**(1.0/2.0))
+                if (do_phi_averaging) then
+                    norm = real(sqrt_norientations ,kind=dp_real)**(-1.0)
+                    nbeta = mod(i/(sqrt_norientations),   sqrt_norientations)
+                    ntheta = mod(i,                       sqrt_norientations)
+                    nph = 0
+                    get_new_angles(3) = 0.
+                else
+                    norm = real(cbrt_norientations ,kind=dp_real)**(-1.0)
+                    nbeta = mod(i/(cbrt_norientations*cbrt_norientations),   cbrt_norientations)
+                    ntheta = mod(i/(cbrt_norientations),               cbrt_norientations)
+                    nph = mod(i,                             cbrt_norientations)
+                    get_new_angles(3) = (2*pi*(nph-1))*norm - pi
+                endif
                 get_new_angles(1) = (2*pi*(nbeta-1))*norm - pi
                 get_new_angles(2) = (pi*(ntheta-1))*norm
-                get_new_angles(3) = (2*pi*(nphi-1))*norm - pi
+                
             else if ( rotation_axis .eq. 'xaxis' ) then 
                 norm = real(norientations ,kind=dp_real)**(-1.0)
                 get_new_angles(1) =  2*pi*(i-1)*norm - pi
