@@ -1,3 +1,9 @@
+* commit 7fc7b58e3167566ad1d2c9cf8d4d206d2383f255
+| Author: John Hoffman <jah5@princeton.edu>
+| Date:   Sat Jun 27 17:55:23 2015 -0400
+| 
+|     Updated version number
+|  
 * commit cf306a162ef45f90dcad9932e47c08e6f715f542
 | Author: John Hoffman <jah5@princeton.edu>
 | Date:   Sat Jun 27 17:52:45 2015 -0400
